fixed item-Box not aligning with naming scheme, changed the flex direction of the box, stretched it, and gave its margin-left auto

--- a/src/style.css
+++ b/src/style.css
@@ -21,9 +21,10 @@ header h1 {
 }
 .to-Do-Item .item-Box {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
+    margin-left: auto;
 }
 .to-Do-Item .due-Date {
    border-radius: 20px;
